--- a/index.html
+++ b/index.html
@@ -1,35 +1,46 @@
 <html>
-<head>
-  <title>Realtime Drawing</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <head>
+       <title>My Selfie App</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
-  <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
+<link href="style.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
+ 
 <body>
-<center>
-  <h class="btn btn-info heading">Changing width, height and postion of a square in Realtime
-    <br>
-    <span class="note">NOTE - Get your left and right wrist closer 
-      to reduce the size of the square and to increase the size of 
-      the square keep your left and right wrist far from each other. 
-      Move you nose to move the square</span>
-    <br>
+    <div class="container">
+    <center>
+        <a href="" id="link" download="myselfie.png"></a>
+        <h1>Voice Selfie App 
+            <img  id="logo_img"  src="Parag.jpg">
+        </h1>
+        <hr>
+        <h4 style="color:red;">Please press allow as soon as popup comes. After you give a voice command</h4>
+        
+        <div class="form-group">
+            <h3>Say "take my selfie"</h3>
+            <label>Your voice output : </label>
+            <textarea class="form-control" id="textbox" readonly="true"></textarea>
+        </div>
+        <button class="btn btn-primary" onclick="start()">Start</button>
 
-  </h>
-</center>
-<div class="copy_right_footer">
-  Devloped by-Parag zode
-</div>
+        <p>Press the Start button</p>
 
-<script src="main.js"></script>
+        <label>Your webcam : </label>
+        <div id="camera"></div>
+
+        <br>
+
+        <label>Your selife Will Display Here: </label>
+        <div id="result"></div>
+
+    </center>
+    </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
-
-
